# llmud

./: MAPPER_ISSUES.md  README.md  docker-compose.yml  play.py  pytest.ini  render.yaml  strategy.md  test_10_rooms_cycles.py  test_agentic_live.py  test_atreides_guild_agentic.py  test_gmcp_attributes.py  test_map_graph_fixes.py  test_mapper.py  test_mapper_full.py  test_mapper_v2.py  test_world_map.json
backend/: .env.example  Dockerfile  main.py  requirements.txt
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ActionButtons.tsx  CommandInput.tsx  ConnectionPanel.tsx  MapView.tsx  MudOutput.tsx  PlayerStatus.tsx  RoomVisualization.tsx
frontend/src/store/: gameStore.ts
mud_client/: .gitignore  README.md  pyproject.toml
mud_client/llmud/: __init__.py  agentic_agent.py  agentic_session.py  context_manager.py  eval_framework.py  game_state.py  gmcp_handler.py  llm_agent.py  map_agent.py  map_graph.py  mud_session.py  telnet_client.py  terminal_app.py
mud_client/tests/: __init__.py  test_gmcp_handler.py  test_map_graph.py
tests/: __init__.py  conftest.py  test_llm_integration.py  test_mud_connection.py  test_strategy_loop.py
tests/strategies/: __init__.py  loop_strategy.md
